syntax = "proto3";
package evmos.vesting.v1;

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "evmos/vesting/v1/vesting.proto";

option go_package = "github.com/tharsis/evmos/x/vesting/types";

// Msg defines the bank Msg service.
service Msg {
  // CreateVestingAccount defines a method that enables creating a vesting
  // account.
  rpc CreateVestingAccount(MsgCreateVestingAccount) returns (MsgCreateVestingAccountResponse) {
    option (google.api.http).get = "/evmos/vesting/v1/tx/create_vesting_account";
  };
  // CreatePeriodicVestingAccount defines a method that enables creating a
  // periodic vesting account.
  rpc CreatePeriodicVestingAccount(MsgCreatePeriodicVestingAccount) returns (MsgCreatePeriodicVestingAccountResponse) {
    option (google.api.http).get = "/evmos/vesting/v1/tx/create_periodic_vesting_account";
  };
  // CreateClawbackVestingAccount defines a method that enables creating a
  // vesting account that is subject to clawback.
  rpc CreateClawbackVestingAccount(MsgCreateClawbackVestingAccount) returns (MsgCreateClawbackVestingAccountResponse) {
    option (google.api.http).get = "/evmos/vesting/v1/tx/create_clawback_vesting_account";
  };
  // Clawback removes the unvested tokens from a ClawbackVestingAccount.
  rpc Clawback(MsgClawback) returns (MsgClawbackResponse) {
    option (google.api.http).get = "/evmos/vesting/v1/tx/clawback";
  };
}

// MsgCreateVestingAccount defines a message that enables creating a vesting
// account.
message MsgCreateVestingAccount {
  option (gogoproto.equal) = true;

  // Address of the account providing the funds, which must also sign the request.
  string from_address = 1 [(gogoproto.moretags) = "yaml:\"from_address\""];
  // Address of the vesting account to create.
  string to_address = 2 [(gogoproto.moretags) = "yaml:\"to_address\""];
  // Amount to transfer to the new account.
  repeated cosmos.base.v1beta1.Coin amount = 3
    [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  // End time of the vesting duration.
  int64 end_time = 4 [(gogoproto.moretags) = "yaml:\"end_time\""];
  // If true, creates a DelayedVestingAccount,
  // otherwise creates a ContinuousVestingAccount.
  bool delayed = 5;
}

// MsgCreateVestingAccountResponse defines the MsgCreateVestingAccount response type.
message MsgCreateVestingAccountResponse {}

// MsgCreatePeriodicVestingAccount defines a message that enables creating a vesting
// account.
message MsgCreatePeriodicVestingAccount {
  option (gogoproto.equal) = false;

  // Address of the account providing the funds, which must also sign the request.
  string from_address = 1 [(gogoproto.moretags) = "yaml:\"from_address\""];
  // Address of the account to receive the funds.
  string to_address = 2 [(gogoproto.moretags) = "yaml:\"to_address\""];
  // Start time of the vesting. Periods start relative to this time.
  int64 start_time = 3 [(gogoproto.moretags) = "yaml:\"start_time\""];
  // Vesting events as a sequence of durations and amounts, starting relative to start_time.
  repeated Period vesting_periods = 4 [(gogoproto.nullable) = false];
  // If true, merge this new grant into an existing PeriodicVestingAccount,
  // or create it if it does not exist. If false, creates a new account,
  // or fails if an account already exists
  bool merge = 5;
}

// MsgCreatePeriodicVestingAccountResponse defines the MsgCreatePeriodicVestingAccount
// response type.
message MsgCreatePeriodicVestingAccountResponse {}

// MsgCreateClawbackVestingAccount defines a message that enables creating a ClawbackVestingAccount.
message MsgCreateClawbackVestingAccount {
  option (gogoproto.equal) = false;

  // Address of the account providing the funds, which must also sign the request.
  string from_address = 1 [(gogoproto.moretags) = "yaml:\"from_address\""];
  // Address of the account to receive the funds.
  string to_address = 2 [(gogoproto.moretags) = "yaml:\"to_address\""];
  // Start time of the vesting. Periods start relative to this time.
  int64 start_time = 3 [(gogoproto.moretags) = "yaml:\"start_time\""];
 // Unlocking events as a sequence of durations and amounts, starting relative to start_time.
  repeated Period lockup_periods = 4 [(gogoproto.nullable) = false];
 // Vesting events as a sequence of durations and amounts, starting relative to start_time.
  repeated Period vesting_periods = 5 [(gogoproto.nullable) = false];
  // If true, merge this new grant into an existing ClawbackVestingAccount,
  // or create it if it does not exist. If false, creates a new account.
  // New grants to an existing account must be from the same from_address.
  bool merge = 6;
}

// MsgCreateClawbackVestingAccountResponse defines the MsgCreateClawbackVestingAccount response type.
message MsgCreateClawbackVestingAccountResponse {}

// MsgClawback defines a message that removes unvested tokens from a ClawbackVestingAccount.
message MsgClawback {

  // funder_address is the address which funded the account
  string funder_address = 1;
  // address is the address of the ClawbackVestingAccount to claw back from.
  string address = 2;
  // dest_address specifies where the clawed-back tokens should be transferred.
  // If empty, the tokens will be transferred back to the original funder of the account.
  string dest_address = 3;
}

// MsgClawbackResponse defines the MsgClawback response type.
message MsgClawbackResponse {}
